[package]
categories  = ["science::geo"]
description = "A command line tool for generating geographic terrain profiles."
edition     = "2021"
homepage    = "https://github.com/jaykickliter/geoprof"
keywords    = ["gis", "geo", "geography", "geospatial"]
license     = "MIT OR Apache-2.0"
name        = "geopath"
readme      = "README.md"
repository  = "https://github.com/jaykickliter/geoprof"
version     = "0.1.0"

[dependencies]
anyhow     = "1"
clap       = { workspace = true }
env_logger = { workspace = true }
geo        = { workspace = true }
itertools  = "*"
num-traits = { workspace = true }
rfprop     = { git = "https://github.com/JayKickliter/Signal-Server", branch = "master" }
serde      = { workspace = true }
serde_json = { workspace = true }
terrain    = { path = "../terrain" }
textplots  = { workspace = true }
