[package]
categories  = ["science::geo"]
description = "A command line tool for generating geographic terrain profiles."
edition     = "2021"
homepage    = "https://github.com/jaykickliter/geoprof"
keywords    = ["gis", "geo", "geography", "geospatial"]
license     = "MIT OR Apache-2.0"
name        = "geopath"
readme      = "README.md"
repository  = "https://github.com/jaykickliter/geoprof"
version     = "0.1.0"

[dependencies]
anyhow     = "1"
clap       = { version = "4.4.2", features = ["derive"] }
env_logger = "0.10"
geo        = { workspace = true }
itertools  = "0.10"
num-traits = { workspace = true }
propah     = { path = "../propah" }
rfprop     = { git = "https://github.com/JayKickliter/Signal-Server", branch = "master" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
terrain    = { path = "../terrain" }
textplots  = "0.8.4"
