[package]
name = "hexit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = "1"
byteorder  = { workspace = true }
clap       = { version = "4.4.2", features = ["derive"] }
env_logger = "0.10"
flate2     = "1.0.28"
geo        = { workspace = true }
geojson    = "0.24.1"
h3o        = { version = "0.4.0", features = ["geo"] }
hextree    = { git = "https://github.com/JayKickliter/HexTree.git", branch = "main", features = ["disktree"] }
indicatif  = "0.17.7"
itertools  = "0.10"
nasadem    = { path = "../nasadem" }
num-traits = { workspace = true }
rayon      = "1.8.0"
serde      = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
