[package]
name    = "nasadem"
version = "0.1.0"
edition = "2021"

[features]
default = []
kml     = ["dep:kml"]

[dependencies]
byteorder = { workspace = true }
geo       = { workspace = true }
kml       = { workspace = true, optional = true }
memmap2   = { workspace = true }
thiserror = { workspace = true }
