[package]
name    = "plot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = "1"
clap       = { workspace = true }
geo        = { workspace = true }
nasadem    = { path = "../nasadem" }
plotters   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
terrain    = { path = "../terrain" }
