[package]
name    = "plot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = "1"
clap       = { workspace = true }
env_logger = { workspace = true }
geo        = { workspace = true }
log        = { workspace = true }
nasadem    = { path = "../nasadem" }
plotters   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
terrain    = { path = "../terrain" }
textplots  = { workspace = true }
rfprop     = { path = "/Users/jay/forks/Signal-Server/rust/rfprop" }
