[package]
name    = "plot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = "1"
clap       = { workspace = true }
env_logger = { workspace = true }
geo        = { workspace = true }
log        = { workspace = true }
nasadem    = { path = "../nasadem" }
plotters   = { workspace = true }
rfprop     = { git = "git@github.com:JayKickliter/Signal-Server.git", branch = "master" }
serde      = { workspace = true }
serde_json = { workspace = true }
terrain    = { path = "../terrain" }
textplots  = { workspace = true }
