[package]
name = "terrain"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap    = { workspace = true }
fast-math  = { workspace = true }
geo        = { workspace = true }
log        = { workspace = true }
nasadem    = { path = "../nasadem" }
num-traits = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
approx    = { workspace = true }
criterion = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.5"

[[bench]]
name = "benchmarks"
harness = false
