[package]
categories  = ["science::geo"]
description = "Geographic terrain profiling."
edition     = "2021"
homepage    = "https://github.com/jaykickliter/geoprof"
keywords    = ["gis", "geo", "geography", "geospatial"]
license     = "MIT OR Apache-2.0"
name        = "terrain"
readme      = "README.md"
repository  = "https://github.com/jaykickliter/geoprof"
version     = "0.1.0"

[dependencies]
dashmap    = { workspace = true }
geo        = { workspace = true }
log        = { workspace = true }
nasadem    = { path = "../nasadem" }
num-traits = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
approx    = { workspace = true }
criterion = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.5"

[[bench]]
name = "benchmarks"
harness = false
